ebus Daemon (ebusd) - NEWS
==========================

2013-02-04:
* Add the ability to send commands via telnet to daemon
  (This ist just added for GET and a few ebus commands for response)

2013-02-01:
* Add functions to read ebus command files

2013-01-25:
* Add autogen.sh script in main dir
* Logging functions changed from level to class system

2013-01-24:
* Add example daemon configuration file
* Add functions for parsing daemon configuration file

2013-01-17:
* Prepare Source to compile with GNU Autotools