@@ -39,8 +39,8 @@
 # print daemon settings (NO | YES/NO)
 #settings=NO
 
-# max retry getting bus (3 | max: 10)
-#max_retry=3
+# retry getting bus (3 | max: 10)
+#get_retry=3
 
 # skipped ACK bytes after get-bus error (1)
 #skip_ack=1
@@ -48,4 +48,5 @@
 # wait time for QQ compare (4000 uesc)
 #max_wait=4000
 
-
+# retry sending msg (2 | max: 10)
+#send_retry=2
