@@ -2,10 +2,12 @@ ebus Daemon (ebusd) - ChangeLog
 ===============================
 
 2013-02-06:
-* FIX: increase length of ebus command from 20 to 30
-* FIX: set initiale value of crclen before escape in eb_send_data_prepare()
-* FIX: in eb_msg_decode_result() do strtok on local copy from r_pos. Maybe
+* Fix: increase length of ebus command from 20 to 30
+* Fix: set initiale value of crclen before escape in eb_send_data_prepare()
+* Fix: in eb_msg_decode_result() do strtok on local copy from r_pos. Maybe
        we don't wont do modife the original value.
+* Fix: compare strlen of given command with command from csv file too.
+* Add: send_retry parameter (2=default) to daemon configuration.
 
 2013-02-04:
 * Add the ability to send commands via telnet to daemon
